# mscc-brsdk-source-2019.02.7-232-stage1_servalt_build

./: .files-list-host.stat  .files-list-staging.stat  .files-list.stat  .gitignore  packages-file-list-host.txt  packages-file-list-staging.txt  packages-file-list.txt
buildroot-config/: auto.conf  autoconf.h  conf  tristate.config
buildroot-fs/: full_devices_table.txt
host-acl-2.2.53/: .applied_patches_list  .files-list-host.txt  Makefile  chacl  config.status  getfacl  libacl.la  libacl.pc  libmisc.la  libtool  setfacl
host-attr-2.4.48/: .applied_patches_list  .files-list-host.txt  Makefile  attr  config.status  getfattr  libattr.la  libattr.pc  libmisc.la  libtool  setfattr
host-autoconf-2.69/: .applied_patches_list  .files-list-host.txt  Makefile  config.status
host-automake-1.15.1/: .applied_patches_list  .files-list-host.txt  Makefile  config.status  runtest
host-bison-3.0.4/: .applied_patches_list  .files-list-host.txt  Makefile  config.status
host-cmake-3.8.2/: .applied_patches_list  .files-list-host.txt  CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
host-fakeroot-1.20.2/: .applied_patches_list  .files-list-host.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  faked  libcommunicate.la  libfakeroot.la  libmacosx.la  libtool  simple
host-flex-2.6.4/: .applied_patches_list  .files-list-host.txt  ChangeLog  Makefile  config.status  libtool
host-gettext-0.19.8.1/: .applied_patches_list
host-kmod-25/: .applied_patches_list  .files-list-host.txt  Makefile  config.status  libtool
mscc-modular-firmware-bfe7bd6/: .files-list-staging.txt  .files-list.txt  CMakeCache.txt  CMakeLists.txt  COPYING  Makefile  buildinfo_mscc-modular-firmware.cmake  buildinfo_mscc-modular-firmware.h  cmake_install.cmake  install_manifest.txt  stage2-loader  stage2-secure-loader
mscc-modular-firmware-bfe7bd6/.cmake/: flags.cmake  version.cmake  version.sh
mscc-modular-firmware-bfe7bd6/scripts/: mfi.rb  mfi.rbe
mscc-modular-firmware-bfe7bd6/src/: basic_linux_system_init_urandom.c  config.h  config.h.in  firmware_vimage.c  firmware_vimage.h  main.c  main.h  mfi.h  ramload.c  ramload.h  run.c  service.c  service.h  service_parse.c  tar.c  tar.h  vtss_compat.h  vtss_mtd.c  vtss_mtd_api.h
(+529 files in other folders)
